--- a/sem1/index.html
+++ b/sem1/index.html
@@ -12,8 +12,11 @@
       </div>
     </div> -->
 
-    <div class="plano-cartesiano">
+    <!-- <div class="plano-cartesiano">
       <div class="particula"></div>
+    </div> -->
+    <div class="flex-container">
+      <div class="flex-square"></div>
     </div>
   </body>
 </html>
